# twilio-agent-test

./: .gitignore  Dockerfile  agent.py  deepgram_setup.py  elevenlabs_setup.py  events.py  main.py  main_gemini.py  prompts.py  pyproject.toml  scratch_ngrok.py  settings.py  test_agent.py  testing_rete.py  testing_twilio.py  tools.py  utils.py
