[project]
name = "sofia-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "flask>=3.1.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "retell-sdk>=5.55.0",
    "twilio>=9.10.9",
    "uvicorn>=0.51.0",
    "websockets>=16.1",
]
